force-app/main/default/objects/Commission_Ledger__c/Commission_Ledger__c.object-meta.xml
<CustomObject>
    <label>Commission Ledger</label>
    <nameField>
        <label>Ledger Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Ledger Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>