force-app/main/default/objects/Commission_Ledger__c/fields/Agreement_Value_Basis__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Basis__c</fullName>
    <label>Agreement Value (basis)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>