force-app/main/default/objects/Commission_Ledger__c/fields/Gross_Commission__c.field-meta.xml
<CustomField>
    <fullName>Gross_Commission__c</fullName>
    <formula>Agreement_Value_Basis__c * Rate_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>