force-app/main/default/objects/Commission_Ledger__c/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <label>Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>