force-app/main/default/objects/Commission_Ledger__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Booking</fullName><default>true</default><label>Booking</label></value>
            <value><fullName>Agreement</fullName><default>false</default><label>Agreement</label></value>
            <value><fullName>Registration</fullName><default>false</default><label>Registration</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>