force-app/main/default/objects/Commission_Ledger__c/fields/Net_Payable__c.field-meta.xml
<CustomField>
    <fullName>Net_Payable__c</fullName>
    <formula>Gross_Commission__c + GST_On_Commission__c - TDS_On_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>