force-app/main/default/objects/Commission_Ledger__c/fields/Payout__c.field-meta.xml
<CustomField>
    <fullName>Payout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payout</label>
    <referenceTo>Commission_Payout__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>