force-app/main/default/objects/Commission_Ledger__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card</label>
    <referenceTo>Commission_Rate_Card__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>