force-app/main/default/objects/Commission_Ledger__c/fields/Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Rate_Pct__c</fullName>
    <label>Commission Rate %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>