force-app/main/default/objects/Commission_Ledger__c/fields/TDS_On_Commission__c.field-meta.xml
<CustomField>
    <fullName>TDS_On_Commission__c</fullName>
    <label>TDS on Commission</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>